Updating all dependencies to the latest